fixing minor alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   display: flex;
+  justify-content: center;
   column-gap: 12px;
   row-gap: 12px;
   margin: 100px auto;
